...
const feedbackEndpointUrl =
    'https://script.google.com/macros/s/AKfycbzeY7ViQhVK8otyuq5ldsDFzTZ5sfbVwMYT0uIfcmzCnbQ0Bdf-hX_x7IBytfUI4DlfHQ/exec';

/// フィードバックカテゴリ.
enum FeedbackCategory {
  /// 改善要望.
  improvement('改善要望'),

  /// 不具合報告.
  bugReport('不具合'),

  /// その他.
  other('その他');
...
